# ghostpost

./: README.md  db.sqlite3  manage.py  pyproject.toml
ghostpost_app/: admin.py  forms.py  models.py  views.py
ghostpost_app/migrations/: 0001_initial.py
ghostpost_config/: asgi.py  settings.py  urls.py  wsgi.py
templates/: addpost.html  boasts.html  index.html  privatepost.html  roasts.html  sortedvotes.html
