[tool.poetry]
name = "ghostpost"
version = "0.1.0"
description = "The GhostPost Machine™ is a website where people can anonymously post Boasts or Roasts of whatever they want."
authors = ["Reginald Tjitradi <rtjitradi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
